--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ license = { text = "Apache-2.0" }
 requires-python = ">=3.8"
 dependencies = [
   "numpy",
+  "pyright>=1.1.403",
+  "pytest-cov>=5.0.0",
   "scipy",
 ]
 
