update precommit hook

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,21 +3,45 @@ repos:
     hooks:
       - id: ruff-format
         name: ruff format
-        entry: uv run --extra dev ruff format
+        entry: uv run ruff format
         language: system
         types: [python]
       - id: ruff-check
         name: ruff check
-        entry: uv run --extra dev ruff check
+        entry: uv run ruff check
         language: system
         types: [python]
       - id: pyright
         name: pyright
-        entry: uv run --extra dev pyright
+        entry: uv run pyright
         language: system
         types: [python]
+        pass_filenames: false
       - id: pytest
         name: pytest
         entry: uv run pytest --cov --cov-branch --cov-report=xml
         language: system
         types: [python]
+        pass_filenames: false
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v5.0.0
+    hooks:
+      - id: trailing-whitespace
+      - id: end-of-file-fixer
+      - id: check-yaml
+      - id: check-added-large-files
+      - id: check-merge-conflict
+      - id: check-case-conflict
+      - id: check-json
+      - id: check-toml
+      - id: check-ast
+      - id: debug-statements
+      - id: detect-aws-credentials
+      - id: detect-private-key
+      - id: fix-byte-order-marker
+      - id: forbid-new-submodules
+      - id: mixed-line-ending
+      - id: pretty-format-json
+      - id: requirements-txt-fixer
+      - id: sort-simple-yaml
+      - id: end-of-file-fixer
