update precommit hook

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,7 +19,7 @@ repos:
         pass_filenames: false
       - id: pytest
         name: pytest
-        entry: uv run pytest --cov --cov-branch --cov-report=xml
+        entry: uv run --extra dev pytest --cov --cov-branch --cov-report=xml
         language: system
         types: [python]
         pass_filenames: false
@@ -41,7 +41,4 @@ repos:
       - id: fix-byte-order-marker
       - id: forbid-new-submodules
       - id: mixed-line-ending
-      - id: pretty-format-json
-      - id: requirements-txt-fixer
       - id: sort-simple-yaml
-      - id: end-of-file-fixer
